[package]
name = "sc16is752"
version = "0.1.1"
edition = "2021"
authors = ["Rand <dint04wooded@icloud.com>"]
description = "A no_std crate for interfacing with the SC16IS752 I2C port expander. This lib provides access to both UARTs and 8x GPIO lines"
repository = "https://github.com/rand12345/sc16is752"
license = "MIT"
readme = "README.md"
keywords = ["embedded", "hardware", "driver", "i2c", "expander"]
categories = ["embedded", "no-std"]
homepage = "https://rand12345.github.io"

[dependencies]
embedded-hal = "=1.0.0-alpha.8"
